public/css/process-queue/processq.css
.feat-processq {
    background: #03121a url('/img/feat-business.jpg') center no-repeat;
    height: 195px;
}
#view-broadcast {
    font-family: 'ralewaybold';
    display: block;
    padding: 9px 20px 6px 90px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    height: 56px;
    margin-top: 8px;
    line-height: 18px;
    vertical-align: middle;
}
#processq #view-broadcast {
    margin-top: 0px;
    color: #fff;
    background: #00ba8b url('/img/bg-view-broadcast.png') left no-repeat;
}
#view-broadcast:hover {
    background-color: #009b74;
}
#view-broadcast:hover{
    text-decoration: none;
}
#processq .page-header p {
    margin-bottom: 0;
}
#processq .page-header {
    margin-bottom: 30px;
}
#processq .page-header h2 {
    margin-top: 6px;
    font-size: 24px;
    font-family: 'ralewaymedium';
}
.processq-box {
    padding: 20px;
    background-color: #fff;
    -webkit-box-shadow: 0 2px 8px 0 rgba(0,0,0,.2);
    box-shadow: 0 2px 8px 0 rgba(0,0,0,.2);
    -webkit-border-radius: 5px;
    border-radius: 5px;
    min-height: 400px;
    max-height: 480px; /*ARA prevents page stretching when too many numbers are called*/
    overflow: auto; /*ARA prevents page stretching when too many numbers are called*/
    margin-bottom: 40px;
}
.processq-box table td:nth-child(2),
.processq-box table th:nth-child(2){
    text-align: right;
    padding-top: 12px;
    padding-bottom: 12px;
}
.processq-box table tbody th:nth-child(1){
    font-size: 16px;
    vertical-align: middle;
    padding-left: 20px
}
.processq-box .btn span {
    margin-left: 3px;
    color: #585a5d;
    font-size: 11px;
}
.processq-box td a {
    margin-right: 5px;
}
.processq-box .delete {
    display: inline-block;
    vertical-align: middle;
    margin-right: 12px;
}
.processq-box .btn-default {
    padding-left: 20px;
    padding-right: 20px;
}
.processq-box .btn-default:hover {
    background-color: #1081a8;
    border: 1px solid #1081a8;
    color: #fff;
}
.processq-box .btn-default:hover span {
    color: #fff;
}
.q-actions {
    padding-left: 10px;
    padding-right: 10px;
    margin-bottom: 20px;
}
.processq-box .form-control {
    display: inline-block;
    width: 80%;
    margin-right: 10px;
    font-size: 20px;
    font-family: 'ralewaybold';
    border: 1px solid #777;
    color: #777;
    height: 40px;
}
.processq-box .q-actions .btn-primary {
    font-size: 40px;
    padding-top: 0;
    padding-bottom: 0;
    line-height: 38px;
    vertical-align: top;
}
.processq-box .q-actions .btn-orange {
    color: #fff;
    font-family: 'ralewaymedium';
    height: 40px;
    padding: 9px 20px;
}


/*ARA*/
.processq-box .btn-select,
.processq-box .dd-select {
    font-family: 'ralewaybold';
    font-size: 15px;
}
.processq-box .dd-select li {
    padding: 6px 10px;
}
.processq-box .btn-select {
    background-color: #fff;
    width: 100%;
    margin-right: 8px;
    text-align: left;
}
.processq-box .btn-select .caret {
    float: right;
    margin-top: 8px;
}

.processq .dropdown-wrapper{
    width:80%;
    display:inline-block;
    margin-right: 10px;
}

.processq .dropdown-menu {
    left: 8px;
    width: 78%;
    background-color: #f7f7f7; /*ARA white background*/
    max-height: 100px; /*ARA prevents page stretching when too many numbers are called*/
    overflow: auto; /*ARA prevents page stretching when too many numbers are called*/
}

.processq .btn-group .dropdown-menu {
    left: 0;
    width: inherit!important;
}

.btn-select {
    background: none;
    outline: none;
    border: none;
    padding: 8px 20px;
    border: 1px solid #777;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

.dd-select li:hover {
    background-color: #ddd;
}

